--- a/app/scss/media.scss
+++ b/app/scss/media.scss
@@ -267,7 +267,7 @@
         padding: 38px 36.25px 64px 36.25px;
     }
 
-    .vacancies__item__button {
+    .vacancies__item-button {
         position: absolute;
         left: 0;
         top: 0;
